adding webview game

--- a/Cognitive-node-webview/app/html/game_fruit.html
+++ b/Cognitive-node-webview/app/html/game_fruit.html
@@ -150,7 +150,7 @@ $( "#6" ).click(function() {
 	var ready = setTimeout(function(){ beReady() }, 0); 
 });
 
-RobotUtils.subscribeToALMemoryEvent("StartGame", function(value) {
+RobotUtils.subscribeToALMemoryEvent("RobotSay", function(value) {
 	var msg = "<img src='assets/images/nao.png'>" +
 	"<p>" + value + "</p>" +
 	"</div>";
