--- a/Cognitive-node-webview/app/html/count-robots.html
+++ b/Cognitive-node-webview/app/html/count-robots.html
@@ -34,7 +34,7 @@
   <div class="right-down" id="2">ROBOT3</div>
   <!--<div class="left-down" id="3">ORANGE</div> -->   
   <!--ready/go --> 
-  <div class="centerDiv" id="4"><img src="assets/images/questions.png"></div>  
+  <div class="centerDiv" style="top: 35%;" id="4"><img src="assets/images/questions.png"></div>  
   <div class="screen-middle" id="5"><h1>Ready!</h1></div>  
   
   <div class="centerDiv" id="6" >
