fixing visivility issues in robots imgs

--- a/Cognitive-node-webview/app/html/count-robots.html
+++ b/Cognitive-node-webview/app/html/count-robots.html
@@ -187,6 +187,9 @@ function startFruitGame() {
         clearTimeout(ready);
         clearTimeout(blinkImages);
         clearTimeout(blinkImagesOff);
+		var ele = document.getElementById(imgId);
+		ele.style.border = null;
+		ele.style.visibility = "visible";
 		var div = $("#4").show(); 
         
         
