changing lauched template

--- a/Cognitive-node-webview/debug/index.html
+++ b/Cognitive-node-webview/debug/index.html
@@ -24,7 +24,7 @@
                     console.log("Connecting to " + robotIp);
                     if (window.location.protocol == "file:") {
                         var projectRoot = window.location.href.split("/debug/index.html")[0];
-                        window.location.href = projectRoot + "/app/html/count-robots.html?robot=" +  robotIp;
+                        window.location.href = projectRoot + "/app/html/count-robots-4.html?robot=" +  robotIp;
                     } else {
                         window.location.href = "/app/html/?robot=" +  robotIp;
                     }
