fixing error of classified

--- a/Cognitive-node-webview/app/html/count-robots-4.html
+++ b/Cognitive-node-webview/app/html/count-robots-4.html
@@ -34,7 +34,7 @@
   <div class="right-down" id="2">ROBOT3</div>
   <!--<div class="left-down" id="3">ORANGE</div> -->   
   <!--ready/go --> 
-  <div class="centerDiv" style="top: 35%;margin-left:-305px" id="4"><img src="assets/images/questions.png"></div>  
+  <div  id="4"><img style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;" src="assets/images/questions.png"></div>  
   <div class="screen-middle" id="5"><h1>Ready!</h1></div>  
   
   <div class="centerDiv" id="6" >
