--- a/Cognitive-node-webview/app/html/player2.html
+++ b/Cognitive-node-webview/app/html/player2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Vison teraphy</title>
+<title>Cognitive Digital Signage</title>
 <link href="assets/css/player.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
  <!--  NOTIFYCATIONS --> 
